--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,21 @@
-asn1crypto==0.24.0
-certifi==2019.11.28
-chardet==3.0.4
+astroid==2.3.3
 Click==7.0
-cryptography==2.1.4
 dominate==2.4.0
-enum34==1.1.6
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
-get==2019.4.13
-gyp==0.1
-idna==2.8
-ipaddress==1.0.17
+Flask-Script==2.0.6
+Flask-WTF==0.14.2
+gunicorn==20.0.4
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
-keyring==10.6.0
-keyrings.alt==3.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-post==2019.4.13
-public==2019.4.13
-pycrypto==2.6.1
-pygobject==3.26.1
-pyxdg==0.25
-query-string==2019.4.13
-request==2019.4.13
-requests==2.22.0
-SecretStorage==2.3.1
-six==1.11.0
-urllib3==1.25.7
-virtualenv==16.7.9
+mccabe==0.6.1
+pylint==2.4.4
+six==1.13.0
+typed-ast==1.4.0
 visitor==0.1.3
 Werkzeug==0.16.0
+wrapt==1.11.2
+WTForms==2.2.1
